--- a/src/PolpAbp.Presentation.Contracts/Localization/Resources/en.json
+++ b/src/PolpAbp.Presentation.Contracts/Localization/Resources/en.json
@@ -7,6 +7,7 @@
     "DisplayName:Presentation.Account.Web.IsTenantRecaptchaEnabled": "Is Recaptcha enabled",
     "Description:Presentation.Account.Web.IsTenantRecaptchaEnabled": "Indicates if the server will enable Recaptcha to protect the system from attackers.",
     "DisplayName:Presentation.Account.Web.IsUserNameEnabled": "Is Username enabled",
-    "Description:Presentation.Account.Web.IsUserNameEnabled": "Indicates if the user name is used for login"
+    "Description:Presentation.Account.Web.IsUserNameEnabled": "Indicates if the user name is used for login",
+    "LoggedOutText": "You have been signed out!"
   }
 }
