Provide helpful links on login/reg pages

--- a/src/PolpAbp.Presentation.Contracts/Localization/PolpAbp/Presentation/en.json
+++ b/src/PolpAbp.Presentation.Contracts/Localization/PolpAbp/Presentation/en.json
@@ -14,7 +14,11 @@
     "Login:EmailConfirmationRequired": "In order to log into the system, you must first confirm your email address.",
     "Login:AdminApprovalPending": "Your account is pending approval by your organization's admin. Please check back later.",
     "Login:AccountAlreadyActive": "Your account has been activated. You can now log in to your account.",
-    "Login:TenantIsRequired": "The system is unable to identify your organization. Please enter your organization information to continue.",
-    "Page:HelpfulLinks": "Helpful Links" 
+    "Login:TenantIsRequired": "Your organization information is missing. Please enter your organization information to continue.",
+    "Page:HelpfulLinks": "Helpful Links",
+    "MemberRegister": "Join an existing organization",
+    "OrganizationRegister": "Create your organization",
+    "OrganizationDoesNotExist": "Is your organization not registered?",
+    "AlreadyRegistered": "Do you have an account?"
   }
 }
